k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-checker-service
spec:
  selector:
    app: crypto-checker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
